# nixos-configs

./: .gitlab-ci.yml  Justfile  README.md  a.txt  bootstrap.sh  configuration.nix  device-configs.nix  device-keys.nix  flake.nix  hardware-configuration.nix  network.nix
apps/: R.nix  default.nix  dotnet.nix  python3.nix  vscode.nix
common/apps/: neovim.nix  nix.nix
common/rnas/: configuration.nix
common/xmobar/: default.nix  xmobar.hs
common/xmonad/: Main.hs  default.nix
common/xmonad/CameronXMonad/: CameronXMonad.cabal
common/xmonad/CameronXMonad/src/: CameronXMonad.hs  Colors.hs
configs/cameron-laptop/: configuration.nix  hardware-configuration.nix
laptop/: configuration.nix
laptop-2/: configuration.nix
laptop-2/hardware/: partitions.nix
laptop-2/home/: .xscreensaver  default.nix
laptop-2/services/: default.nix  ssh.nix
laptop-2/system/: default.nix
laptop-2/users/: default.nix
laptop/apps/: default.nix  nix.nix  vscode.nix
laptop/hardware/: default.nix
laptop/home/: .bashrc  home.nix
laptop/services/: cron.nix  default.nix  ipfs.nix
laptop/system/: bluetooth.nix  default.nix  networking.nix
laptop/users/: default.nix
laptop/window-manager/: default.nix  xmonad.nix
machines/cameron-tp-p15/: configuration.nix
machines/media-server/: configuration.nix  hardware-configuration.nix  home.nix
machines/mserver/: configuration.nix  hardware-configuration.nix  (+1 more)
phone/: configuration.nix
pkgs/: codex.nix
server/: configuration.nix  hardware-configuration.nix
shared/: default.nix
wm/: default.nix  gnome.nix  xmonad.nix
(+126 files in other folders)
